--- a/css/button.css
+++ b/css/button.css
@@ -1,17 +1,16 @@
-.deleteButton {
+.button {
   background-color: rgb(247, 150, 167);
   border: none;
   padding: 5px;
   border-radius: 5px;
   font-size: 80%;
-  margin-left: 10px;
+  margin-left: 1px;
 }
 
-.addButton {
-  background-color: rgb(247, 150, 167);
-  border: none;
-  padding: 5px;
-  border-radius: 5px;
-  font-size: 80%;
+.deleteButton, .doneButton {
+  float: right;
 }
+
+
+
 
